don't show tooltip helper for bools or strings - should be self evident

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -36,6 +36,8 @@
                                  or "{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}"
                             {% endif %}
                         ).{% if obj[1].extras[0] != 'none' %} Values in `extras` cannot be combined.{% endif %}' class="attribute-type">flaglist</code>)
+                    {% elsif obj[1].valType == "boolean" or obj[1].valType == "string" %}
+                        (<code>{{obj[1].valType}}</code>)
                     {% else %}
                     {% assign typekey = obj[1].valType %}
                     (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
