--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -38,6 +38,8 @@
                         ).{% if obj[1].extras[0] != 'none' %} Values in `extras` cannot be combined.{% endif %}' class="attribute-type">flaglist</code>)
                     {% elsif obj[1].valType == "boolean" or obj[1].valType == "string" %}
                         (<code>{{obj[1].valType}}</code>)
+                    {% elsif obj[1].valType == "info_array" %}
+                        (<code>{array}</code>)
                     {% else %}
                     {% assign typekey = obj[1].valType %}
                     (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
