--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -55,11 +55,14 @@
                 {% endif %}
             {% endif %}
 
-                <br>default: {{ obj[1].dflt }}
             {% if display_info and obj[1].flags %}
                 <br>flags: {% for value in obj[1].flags %}
                     {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}{% unless forloop.last %} | {% endunless %}
                 {% endfor %}
+            {% endif %}
+
+            {% if display_info and obj[1].dflt %}
+                <br>default: <code>{% if obj[1].dflt == "" %}**{% else %}{% if obj[1].valType == "string" or obj[1].valType == "color" or (obj[1].valType == "enumerated" and obj[1].dflt != true and obj[1].dflt != false) or obj[1].dflt == "auto" %}*{{ obj[1].dflt }}*{% elsif obj[1].valType == "info_array" %}[{{obj[1].dflt[0]}}, {{obj[1].dflt[1]}}]{% else %}{{obj[1].dflt}}{% endif %}{% endif %}</code>
             {% endif %}
 
             {% if display_info and obj[1].extras %}
