--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -8,9 +8,9 @@
 	{% if page.language == "python" %}
 		{% assign pyclass = "lang_nav_act" %}
 	{% elsif page.language == "ruby" %}
-		{% assign pyclass = "lang_nav_act" %}
+		{% assign rubyclass = "lang_nav_act" %}
 	{% elsif page.language == "php" %}
-		{% assign pyclass = "lang_nav_act" %}
+		{% assign phpclass = "lang_nav_act" %}
 	{% elsif page.language == "pandas" %}
 		{% assign pdclass = "lang_nav_act" %}
 	{% elsif page.language contains "matlab" %}
@@ -41,7 +41,7 @@
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/ruby{{page_type}}"><img src="{{ site.staticurl }}/images/ruby-small.png" alt="ruby" class="lang_nav_thum">RUBY</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "php" %}
-			<div class="lang_nav_button-div"><a class="lang_nav_button {{rubyclass}}" href="/php{{page_type}}"><img src="{{ site.staticurl }}/images/php-small.png" alt="php" class="lang_nav_thum">PHP</a></div>
+			<div class="lang_nav_button-div"><a class="lang_nav_button {{phpclass}}" href="/php{{page_type}}"><img src="{{ site.staticurl }}/images/php-small.png" alt="php" class="lang_nav_thum">PHP</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "pandas" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{pdclass}}" href="/pandas{{page_type}}"><img src="{{ site.staticurl }}/images/pandas-small.png" alt="pandas" class="lang_nav_thum">PANDAS</a></div>
