--- a/_includes/dashboard-nav.html
+++ b/_includes/dashboard-nav.html
@@ -47,16 +47,11 @@
           </ul>
         </li>
         <li><a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">Technical Support</a></li>         
-        <li><a href="https://github.com/plotly/dashboards/raw/master/Plotly%20Sample%20Dashboard.zip">Download Code</a></li>
-
+        <li><a id="forklink" href="https://github.com/plotly/dashboards"><i class="fa fa-github-alt"></i> Fork on GitHub</a></li>
+        <li>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://plot.ly/{{page.language}}/dashboard" data-via="plotlygraphs" data-hashtags="d3js">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </li>
       </ul>
-
-      <span style="border:0; overflow:hidden; position:absolute; right:10px; top: 15px;">
-              <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://plot.ly/{{page.language}}/dashboard" data-via="plotlygraphs" data-hashtags="d3js">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </span>
-      <span style="border:0; overflow:hidden; position:absolute; right:130px; top: 15px;">
-          <a id="forklink" href="https://github.com/plotly/dashboards"><i class="fa fa-github-alt"></i> Fork on GitHub</a>
-      </span>
     </div>
   </div>
 </div>
