--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -25,7 +25,6 @@ body.application hr {
   margin: 10px 0;
 }
 
-
 .navbar-inverse {
   background-color: #3d4a57;
   border-color: #333;
@@ -80,7 +79,7 @@ body.application hr {
 .dash-title{
   font-size: 18px !important;
   margin: 0px !important;
-  font-weight: 100 !important;
+  font-weight: 400 !important;
   letter-spacing: 0.2rem !important;
 }
 
@@ -91,4 +90,69 @@ body.application hr {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+/* Industries dashboards */
+
+.navbar-industries .navbar-nav > li > a,
+.navbar .navbar-brand {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar-industries .navbar-nav > li > a:hover,
+.navbar .navbar-brand:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar-industries{
+  font-weight: 200;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+}
+
+.navbar-industries .navbar-nav{
+  position: absolute;
+  right: 20px;
+}
+
+.navbar-industries li{
+  float: right !important;
+}
+
+.navbar-industries #forklink{
+  color: inherit;
+}
+
+.btn{
+  border: 0px;
+  border-radius: 0px;
+}
+
+div.plotly-intro-industries{
+    width: 80%;
+    background-color: white;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
+    color: #444;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 980px;
+}
+
+.plotly-intro-industries h4{
+    color: #888;
+    font-weight: 200;
+    letter-spacing: 0.01rem !important;
+    line-height: 24px;
+}
+
+.plotly-intro-industries ul{
+    list-style: circle inside;
+    line-height: 1.6;
+    font-weight: 200;
+    letter-spacing: 0.1rem;
 }
