--- a/all_static/css/keen-static.css
+++ b/all_static/css/keen-static.css
@@ -17,6 +17,7 @@ h2 {
   color: #2a333c;
   font-weight: 200;
   font-size: 21px;
+  font-weight: 200 !important;
 }
 h3 {
   color: rgb(84, 102, 120);
@@ -24,6 +25,7 @@ h3 {
   font-weight: 500;
   letter-spacing: -0.28px;
   line-height: 29.39px;
+  font-weight: 200 !important;
 }
 
 .btn {
