indicate a tooltip with the pointer

--- a/all_static/css/reference.css
+++ b/all_static/css/reference.css
@@ -22,11 +22,11 @@ code {
 
 [tooltip] {
     border-bottom: thin dotted grey;
+    cursor: pointer;
 }
 
 /*http://stackoverflow.com/a/25813336/4142536*/
 [tooltip]:before {
-    /* needed - do not touch */
     content: attr(tooltip);
     position: absolute;
     opacity: 0;
