add python's graph_objs to the type identifiers and tooltips

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -47,9 +47,21 @@
                 {% endif %}
                 {% if obj[1].role == "object" %}
                     {% if obj[1]._isLinkedToArray %}
+                        {% if page.language != "python" %}
                         (<code tooltip="An {% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s. Each {% raw %}{object}{% endraw %} has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s</code>)
+                        {% else %}
+                        (<code tooltip="An {% raw %}{array}{% endraw %} of <code>plotly.graph_objs.{{obj[0] | capitalize}}</code> objects. Each <code>plotly.graph_objs.{{obj[0] | capitalize}}</code> has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of <code>plotly.graph_objs.{{obj[0] | capitalize}} objects</code></code>)
+                        {% endif %}
                     {% else %}
+                        {% if page.language != "python" %}
                         (<code tooltip="An {% raw %}{object}{% endraw %} with one or more of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
+                        {% else %}
+                        (<code tooltip="A plotly.graph_objs.{{ obj[0] | capitalize }} object with one or more of the keys listed below." class="attribute-type">plotly.graph_objs.{{ obj[0] | capitalize }}</code>)
+                        {% endif %}
+                    {% endif %}
+                    {% if page.language == "python" and obj[1].role == "object" %}
+                    <br>A <code>plotly.graph_objs.{{ obj[0] | capitalize }}</code> object with one or more of the keys listed below.
+                    Import as: <br><code>import plotly.graph_objs as go</code><br><code>go.{{ obj[0] | capitalize }}</code>
                     {% endif %}
                 {% endif %}
             {% endif %}
