add the description back

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -86,6 +86,10 @@
                 <br>examples: <code>*{{obj[1].flags[0]}}*</code>, <code>*{{obj[1].flags[1]}}*</code>, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}*</code>{% if obj[1].flags[2] %}, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}*</code>{% endif %}{% if obj[1].extras %}, <code>*{{obj[1].extras[0]}}*</code>{% endif %}
             {% endif %}
 
+            {% if display_info and obj[1].description %}
+                <br>{{ obj[1].description | escape }}
+            {% endif %}
+
             {% if obj[1].role == "object" %}
                 {% assign parentattribute = attribute %}
                 {% capture localparentlink %}{{include.parentlink}}-{{obj[0]}}{% endcapture %}
