--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -83,6 +83,11 @@ body.application hr {
   letter-spacing: 0.2rem !important;
 }
 
+.dash-title-languages{
+  font-weight: 200 !important;
+  font-color: white !important;
+}
+
 #forklink{
   font-weight: 300;
   font-family: "Open sans",verdana,arial,sans-serif;
