--- a/_includes/dashboard-nav.html
+++ b/_includes/dashboard-nav.html
@@ -11,7 +11,7 @@
         <span class="glyphicon glyphicon-chevron-left" style="color:white;"></span>
       </a>
       <a class="navbar-brand" href="https://plot.ly/{{page.language | capitalize}}/">
-        <h1 class="dash-title" style="color:white;">{{page.language | capitalize}} Dashboards</h1>
+        <h1 class="dash-title dash-title-languages">{{page.language | capitalize}} Dashboards</h1>
       </a>      
     </div>
     <div class="navbar-collapse collapse">
@@ -49,8 +49,8 @@
         <li><a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">Technical Support</a></li>         
         <li><a id="forklink" href="https://github.com/plotly/dashboards"><i class="fa fa-github-alt"></i> Fork on GitHub</a></li>
         {% if page.language | capitalize == 'Python' %}
-        <li>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://plot.ly/{{page.language}}/dashboard" data-via="plotlygraphs" data-hashtags="d3js" style="margin-top:15px;">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <li  style="position:absolute; top:15px; right:5px;">
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://plot.ly/{{page.language}}/dashboard" data-via="plotlygraphs" data-hashtags="d3js">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </li>
         {% endif %}
       </ul>
