add matlab reference

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -34,6 +34,8 @@
                 <code>plot_ly(df, type="{{trace[0]}}"[, ...])<br>
                       add_trace(p, type="{{trace[0]}}"[, ...])</code><br>
                 A {{trace[0]}} trace accepts any of the keys listed below.
+            {% elsif page.language == "matlab" %}
+                A <code>{{trace[0]}}</code> trace is a <code>struct</code> inside <code>fig.data</code> which has <code>type</code> equal to <code>'{{trace[0]}}'</code>. This section lists all of the valid keys that a <code>{{trace[0]}} struct</code> can contain.
             {% endif %}
             <br><br>{{ trace[1].description }}<br><br>
         </div>
