rm data_array tooltips - doesn't rly add any extra info

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -36,6 +36,7 @@
                                  or "{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}"
                             {% endif %}
                         ).{% if obj[1].extras[0] != 'none' %} Values in `extras` cannot be combined.{% endif %}' class="attribute-type">flaglist</code>)
+                    {% elsif obj[1].valType == "boolean" or obj[1].valType == "string" or obj[1].valType == "data_array" %}
                         (<code>{{obj[1].valType}}</code>)
                     {% elsif obj[1].valType == "info_array" %}
                         (<code>{array}</code>)
