add key "type" back in, except for in python's traces

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -8,14 +8,16 @@
                 {% assign localparentlink=trace[0] %}
                 {% assign display_info = false %}
                 {% assign toc = true %}
-                {% include reference-block.html parentlink=localparentlink %}
+                {% assign block = "data" %}
+                {% include reference-block.html parentlink=localparentlink block=block %}
                 <hr>
             {% endfor %}
 
             <a href="#layout"><h4>layout</h4></a>
             {% assign localparentlink="layout" %}
             {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-            {% include reference-block.html parentlink=localparentlink %}
+            {% assign block = "layout" %}
+            {% include reference-block.html parentlink=localparentlink block=block %}
         </div>
     </div>
 
@@ -44,15 +46,16 @@
         {% assign attribute=trace[1].attributes %}
         {% assign display_info = true %}
         {% assign toc = false %}
-        {% include reference-block.html parentlink=localparentlink%}
+        {% assign block = "data" %}
+        {% include reference-block.html parentlink=localparentlink block=block %}
         <hr>
     {% endfor %}
 
     <a id="layout" href="#layout"><h4>layout</h4></a>
     {% assign localparentlink="layout" %}
     {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-    {% include reference-block.html parentlink=localparentlink %}
-
+    {% assign block = "layout" %}
+    {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
 </div>
 {% endcapture %}
