--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -1,6 +1,11 @@
 <ul>
 {% for obj in attribute %}
-    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "type" and obj[0] != "_isLinkedToArray" %}
+    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "_isLinkedToArray" %}
+
+        {% if obj[0] == "type" and page.language == "python" and block == "data" %}
+            {% continue %}
+        {% endif %}
+
         <li>
             {% if toc %}
                 {% assign id="" %}
@@ -12,9 +17,14 @@
             </a>
 
             {% if display_info %}
+
+                {% if obj[0] == "type" and block == "data" %}
+                    (<code>*{{obj[1]}}*</code>)
+                {% endif %}
+
                 {% if obj[1].valType %}
                     {% if obj[1].valType == "enumerated" %}
-                        (<code tooltip='One of the following items (e.g. {% if obj[1].values[0] != false and obj[1].values[0] != true %}*{{obj[1].values[0]}}*{% else %}{{obj[1].values[0]}}{% endif %}).' class="attribute-type">{{ obj[1].valType }}</code><code> -
+                        (<code tooltip='One of the following items (e.g. {% if obj[1].values[0] != false and obj[1].values[0] != true %}*{{obj[1].values[0]}}*{% else %}{{obj[1].values[0]}}{% endif %}).' class="attribute-type">{{ obj[1].valType }}</code><code>:
                         {% for value in obj[1].values %}
                             {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}
                             {% unless forloop.last %}|{% endunless %}
@@ -94,7 +104,7 @@
                 {% assign parentattribute = attribute %}
                 {% capture localparentlink %}{{include.parentlink}}-{{obj[0]}}{% endcapture %}
                 {% assign attribute = obj[1] %}
-                {% include reference-block.html parentlink=localparentlink %}
+                {% include reference-block.html parentlink=localparentlink block=block %}
                 {% assign attribute = parrentattribute %}
             {% endif %}
 
