show type for nested objects in python, too.

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -104,6 +104,7 @@
                 {% assign parentattribute = attribute %}
                 {% capture localparentlink %}{{include.parentlink}}-{{obj[0]}}{% endcapture %}
                 {% assign attribute = obj[1] %}
+                {% assign block = "nested" %}
                 {% include reference-block.html parentlink=localparentlink block=block %}
                 {% assign attribute = parrentattribute %}
             {% endif %}
