proper capitalization for objects in python

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -29,8 +29,14 @@
             {% if page.language == "plotly_js" %}
                 A <code>{{trace[0]}}</code> trace is an object with the key <code>"type"</code> equal to <code>"{{trace[1].attributes.type}}"</code> (i.e. <code>{"type": "{{trace[1].attributes.type}}"}</code>) and any of the keys listed below.
             {% elsif page.language == "python" %}
-                <code>import plotly.graph_objs as go</code><br><code>go.{{ trace[1].attributes.type | capitalize }}</code><br>
-                A <code>{{ trace[1].attributes.type | capitalize }}</code> trace is a graph object with any of the keys listed below.
+                {% if trace[1].hrName %}
+                    {% capture graph_object %}{{ trace[1].hrName }}{% endcapture %}
+                {% else %}
+                    {% capture graph_object %}{{trace[0] }}{% endcapture %}
+                {% endif %}
+                {% capture graph_object %}{{ graph_object | replace: '_', ' ') | capitalize_all | replace: ' ', '' | replace: '2d', '2D' | replace: '3d' : '3D'}}{% endcapture %}
+                <code>import plotly.graph_objs as go</code><br><code>go.{{ graph_object }}</code><br>
+                A <code>{{ graph_object }}</code> trace is a graph object with any of the named arguments or attributes listed below.
             {% elsif page.language == "r" %}
                 A <code>{{trace[0]}}</code> trace is initialized with <code>plot_ly</code> or <code>add_trace</code>:<br>
                 <code>plot_ly(df, type="{{trace[0]}}"[, ...])<br>
