added reports to dashboard pages

--- a/_includes/dashboard-industries-intro.html
+++ b/_includes/dashboard-industries-intro.html
@@ -1,36 +1,5 @@
 <div class="plotly-intro-industries">
-  <h2 style="color:{{ page.background_color }};margin:0;">
-    {{ page.industry }} Dashboard
-  </h2>
-  <h4>
-    <small>{{ page.description }}</small>
-  </h4>
-  <p>
-    <strong>Plotly basics</strong>
-  </p>
-  <ul>
-    <li> 
-      Plotly is free for unlimited public data, or $20 per month for private data: <a href="https://plot.ly/products/cloud/">Plans</a>.
-    </li>
-    <li> 
-      Plotly charts are made in <a href="https://plot.ly/python/">Python, <a href="https://plot.ly/R/">R</a>, or by uploading Excel/CSV sheets to Plotly's Web App.
-    </li> 
-  </ul>
-  <p>
-    <strong>Tips for professional dashboards</strong>
-  </p>    
-  <ul>
-    <li>
-      We recommend these free <a href="http://keen.github.io/dashboards/">dashboard templates</a> and hosting dashboards on AWS. 
-    </li>
-    <li>
-      Plotly charts can also be organized into folders and <a href="#">shared as reports</a>.
-    </li>           
-    <li>
-      We recommend <a href="http://colorbrewer2.org/">Color Brewer</a> for choosing chart colors.
-    </li>
-    <li>
-      Keep your charts simple and don't overclutter.
-    </li>    
-  </ul>
+  <h3 style="margin:0;">
+    Make your own dashboards like this with <a href="http://dashboards.ly/" style="color:{{page.background_color}}; text-decoration:none;">Dashboards.ly</a>
+  </h3>
 </div>
