--- a/_includes/dashboard-nav.html
+++ b/_includes/dashboard-nav.html
@@ -11,7 +11,7 @@
         <span class="glyphicon glyphicon-chevron-left" style="color:white;"></span>
       </a>
       <a class="navbar-brand" href="https://plot.ly/{{page.language | capitalize}}/">
-        <h1 class="dash-title dash-title-languages">{{page.language | capitalize}} Dashboards</h1>
+        <h1 class="dash-title dash-title-languages" style="color:white;">{{page.language | capitalize}} Dashboards</h1>
       </a>      
     </div>
     <div class="navbar-collapse collapse">
@@ -46,7 +46,10 @@
             <li><a href="https://plot.ly/{{page.language | capitalize}}/sending-data-to-charts/#add-new-traces-to-a-chart">Add new traces</a></li>
           </ul>
         </li>
-        <li><a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">Technical Support</a></li>         
+        <li><a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">Technical Support</a></li>    
+        {% if page.report_link %}
+          <li><a id="forklink" href="{{ page.report_link }}"><i class="fa fa-bar-chart"></i> Report View</a></li>
+        {% endif %}              
         <li><a id="forklink" href="https://github.com/plotly/dashboards"><i class="fa fa-github-alt"></i> Fork on GitHub</a></li>
         {% if page.language | capitalize == 'Python' %}
         <li  style="position:absolute; top:15px; right:5px;">
