--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -145,7 +145,8 @@ div.plotly-intro-industries{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 980px;
+    max-width: 800px;
+    text-align: center;
 }
 
 .plotly-intro-industries h4{
