consolidate plotly.js versions

--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -62,7 +62,7 @@
       	<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });'>
       		<i class="fa fa-download fa-lg"></i> Download
       	</a>
-      	<p class="centered version-number">version 20150720a_basic</p>
+      	<p class="centered version-number">version {{site.plotlyjs_version}}</p>
       </div>
     </div>
   </div>
