--- a/_includes/first-header.html
+++ b/_includes/first-header.html
@@ -24,19 +24,9 @@
       <span class="headerbar-nav-item ">Explore</span>
       </a>
 
-      <a href="https://plot.ly/products/" onmouseover="dropDownMenu('products-nav')" onmouseout="hideDropDownMenu('products-nav')" target="_self">
-      <span class="headerbar-nav-item ">Products</span><span class="caret"></span>
+      <a href="https://plot.ly/products/cloud/" target="_self">
+      <span class="headerbar-nav-item ">Pricing</span>
       </a>
-
-          <nav id="products-nav" role="menu" class="dropdown-menu" onmouseover="dropDownMenu('products-nav')" onmouseout="hideDropDownMenu('products-nav')" style="display:none; margin-left: 25px;">
-            <a href="https://plot.ly/products/cloud/" class="dropdown-menu-item" target="_self">CLOUD</a>
-            <a href="https://plot.ly/products/desktop/" class="dropdown-menu-item" target="_self">DESKTOP</a>
-            <a href="https://plot.ly/products/on-premise/" class="dropdown-menu-item" target="_self">ON PREMISE</a>
-            <a href="https://plot.ly/product/plotlyjs/" class="dropdown-menu-item" target="_self">PLOTLY.JS</a>
-            <a href="https://plot.ly/products/add-ons/" class="dropdown-menu-item" target="_self">ADD-ONS</a>
-          </nav>
-
-      <a href="https://plot.ly/products/industries/" onmouseover="dropDownMenu('industries-nav')" onmouseout="hideDropDownMenu('industries-nav')" target="_self">
       <span class="headerbar-nav-item ">Industries</span><span class="caret"></span>
       </a>
 
