--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -382,7 +382,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 {% endif %}
 
 {% if page.language == 'matlab' %}
-	<li><a href="http://purchasing.plot.ly/plotly-offline-matlab">Start a free 14 day Trial of plotly offline for MATLAB/a></li>
+	<li><a href="http://purchasing.plot.ly/plotly-offline-matlab">Start a free 14 day Trial of plotly offline for MATLAB</a></li>
 	<li><a href="https://plot.ly/matlab/offline/">plotly offline documentation</a></li>
 {% endif %}
 
