--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -40,14 +40,10 @@
                         {% else %}
                             (<code class="attribute-type">{{ obj[1].valType }}</code>)
                         {% endif %}
-                    {% elsif obj[1].valType == "flaglist" %}
-                        (<code tooltip='A string representing a combination of flags (order does not matter here). Combine any of the available `flags` with + (e.g. "{{obj[1].flags[0]}}+{{obj[1].flags[1]}}"
-                            {% if obj[1].flags[2] %}
-                                 or "{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}"
-                            {% endif %}
-                        ).{% if obj[1].extras[0] != 'none' %} Values in `extras` cannot be combined.{% endif %}' class="attribute-type">flaglist</code>)
                     {% elsif obj[1].valType == "boolean" or obj[1].valType == "string" or obj[1].valType == "data_array" %}
                         (<code>{{obj[1].valType}}</code>)
+                    {% elsif obj[1].valType == "flaglist" %}
+                        (<code>{{obj[1].valType}} string</code>)
                     {% elsif obj[1].valType == "info_array" %}
                         (<code>{array}</code>)
                     {% else %}
@@ -81,24 +77,26 @@
                 {% endif %}
             {% endif %}
 
-            {% if display_info and obj[1].flags %}
-                <br>flags: {% for value in obj[1].flags %}
-                    {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}{% unless forloop.last %} | {% endunless %}
-                {% endfor %}
+            {% if display_info and obj[1].valType == "flaglist" %}
+
+                <br>Any combination of {% for value in obj[1].flags %}{% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}{% unless forloop.last %}, {% endunless %} {% endfor %} joined with a <code>*+*</code>
+
+                {% if obj[1].extras %}
+                    OR {% for value in obj[1].extras %}{% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}{% unless forloop.last %} or {% endunless %}{% endfor %}.
+                {% endif %}
+
+                <br>examples: <code>*{{obj[1].flags[0]}}*</code>, <code>*{{obj[1].flags[1]}}*</code>, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}*</code>{% if obj[1].flags[2] %}, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}*</code>{% endif %}{% if obj[1].extras %}, <code>*{{obj[1].extras[0]}}*</code>{% endif %}
+
+                {% if obj[1].dflt %}
+                    <br>default: <code>*{{ obj[1].dflt }}*</code>
+                {% endif %}
+
             {% endif %}
 
             {% if display_info and obj[1].dflt %}
-                <br>default: <code>{% if obj[1].dflt == "" %}**{% else %}{% if obj[1].valType == "string" or obj[1].valType == "color" or (obj[1].valType == "enumerated" and obj[1].dflt != true and obj[1].dflt != false) or obj[1].dflt == "auto" %}*{{ obj[1].dflt }}*{% elsif obj[1].valType == "info_array" %}[{{obj[1].dflt[0]}}, {{obj[1].dflt[1]}}]{% else %}{{obj[1].dflt}}{% endif %}{% endif %}</code>
-            {% endif %}
-
-            {% if display_info and obj[1].extras %}
-                <br>extras: {% for value in obj[1].extras %}
-                    {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}{% unless forloop.last %} | {% endunless %}
-                    {% endfor %}
-            {% endif %}
-
-            {% if display_info and obj[1].valType == "flaglist" %}
-                <br>examples: <code>*{{obj[1].flags[0]}}*</code>, <code>*{{obj[1].flags[1]}}*</code>, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}*</code>{% if obj[1].flags[2] %}, <code>*{{obj[1].flags[0]}}+{{obj[1].flags[1]}}+{{obj[1].flags[2]}}*</code>{% endif %}{% if obj[1].extras %}, <code>*{{obj[1].extras[0]}}*</code>{% endif %}
+                {% unless obj[1].valType == "flaglist" %}
+                    <br>default: <code>{% if obj[1].dflt == "" %}**{% else %}{% if obj[1].valType == "string" or obj[1].valType == "color" or (obj[1].valType == "enumerated" and obj[1].dflt != true and obj[1].dflt != false) or obj[1].dflt == "auto" %}*{{ obj[1].dflt }}*{% elsif obj[1].valType == "info_array" %}[{{obj[1].dflt[0]}}, {{obj[1].dflt[1]}}]{% else %}{{obj[1].dflt}}{% endif %}{% endif %}</code>
+                {% endunless %}
             {% endif %}
 
             {% if display_info and obj[1].description %}
