so, what's a `data_array`?

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -40,10 +40,16 @@
                         {% else %}
                             (<code class="attribute-type">{{ obj[1].valType }}</code>)
                         {% endif %}
-                    {% elsif obj[1].valType == "boolean" or obj[1].valType == "string" or obj[1].valType == "data_array" %}
+                    {% elsif obj[1].valType == "boolean" %}
                         (<code>{{obj[1].valType}}</code>)
                     {% elsif obj[1].valType == "flaglist" %}
                         (<code>{{obj[1].valType}} string</code>)
+                    {% elsif obj[1].valType == "data_array" %}
+                        {% if page.language == "python" %}
+                            (<code>list, numpy array, or Pandas series of numbers, strings, or datetimes.</code>)
+                        {% else %}
+                            (<code tooltip='{% raw %}{array}{% endraw %} of numbers, strings, or date strings (strings in the format YYYY-MM-DD HH:MM:ss.ffff - hours, minutes, and milliseconds are optional).'>{{obj[1].valType}}</code>)
+                        {% endif %}
                     {% elsif obj[1].valType == "info_array" %}
                         (<code>{array}</code>)
                     {% else %}
