so, what's `any`?

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -52,6 +52,8 @@
                         {% endif %}
                     {% elsif obj[1].valType == "info_array" %}
                         (<code>{array}</code>)
+                    {% elsif obj[1].valType == "any" %}
+                        (<code>number or categorical coordinate string</code>)
                     {% else %}
                         {% assign typekey = obj[1].valType %}
                         (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
