remove nested graph_objs in favor of `dict`

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -70,25 +70,10 @@
                     {% endif %}
                 {% endif %}
                 {% if obj[1].role == "object" %}
-                    {% if page.language == "python" %}
-                        {% if obj[1].hrName %}
-                            {% capture graph_object %}{{ obj[1].hrName }}{% endcapture %}
-                        {% else %}
-                            {% capture graph_object %}{{ obj[0] }}{% endcapture %}
-                        {% endif %}
-                        {% capture graph_object %}{{ graph_object | replace: '_', ' ') | capitalize_all | replace: ' ', '' | replace: '2d', '2D' | replace: '3d' : '3D'}}{% endcapture %}
-                    {% endif %}
-
                     {% if obj[1].items %}
                         (<code tooltip="{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s. Each {% raw %}{object}{% endraw %} has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s</code>)
                     {% else %}
-                        {% if page.language != "python" %}
-                        (<code tooltip="An {% raw %}{object}{% endraw %} with one or more of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
-                        {% else %}
-                        (<code tooltip="A plotly.graph_objs.{{ graph_object }} object with one or more of the keys listed below." class="attribute-type">plotly.graph_objs.{{graph_object}}</code>)
-                        <br>A <code>plotly.graph_objs.{{ graph_object }}</code> object with any of the named arguments or attributes listed below.
-                        Import as: <br><code>import plotly.graph_objs as go</code><br><code>go.{{ graph_object }}</code>
-                        {% endif %}
+                        (<code tooltip="{% raw %}{object}{% endraw %} with any of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
                     {% endif %}
 
 
