describe a bit about annotations

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -111,6 +111,11 @@
 
             {% if obj[1].items %}
                 <br>Each {% raw %}{object}{% endraw %} has one or more of the keys listed below.
+                {% if obj[0] == "annotations" %}
+                    {% unless obj[1].description %}
+                        <br>An annotation is a text element that can be placed anywhere in the plot. It can be positioned with respect to relative coordinates in the plot or with respect to the actual data coordinates of the graph. Annotations can be shown with or without an arrow.
+                    {% endunless %}
+                {% endif %}
             {% endif %}
 
             {% if obj[1].role == "object" %}
