--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -23,7 +23,7 @@
                 {% endif %}
 
                 {% if obj[1].valType %}
-                    {% if obj[1].valType == "enumerated" %}
+                    {% if obj[1].valType == "enumerated" or obj[1].valType.values %}
                         (<code tooltip='One of the following items (e.g. {% if obj[1].values[0] != false and obj[1].values[0] != true %}*{{obj[1].values[0]}}*{% else %}{{obj[1].values[0]}}{% endif %}).' class="attribute-type">{{ obj[1].valType }}</code><code>:
                         {% for value in obj[1].values %}
                             {% if value != false and value != true %}<code>*{{value}}*</code>{% else %}<code>{{value}}</code>{% endif %}
