remove uid, smith

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -1,6 +1,6 @@
 <ul>
 {% for obj in attribute %}
-    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "_isLinkedToArray" and obj[0] != "items" %}
+    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "_isLinkedToArray" and obj[0] != "items" and obj[0] != "uid" and obj[0] != "smith" %}
 
         {% if obj[0] == "type" and page.language == "python" and block == "data" %}
             {% continue %}
@@ -129,7 +129,7 @@
                 {% else %}
                     {% assign attribute = obj[1] %}
                 {% endif %}
-                {% assign block = "nested" %}
+                {% assign block = "nested" %}
                 {% include reference-block.html parentlink=localparentlink block=block %}
                 {% assign attribute = parrentattribute %}
             {% endif %}
