rm a couple more hidden keys

--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -1,6 +1,6 @@
 <ul>
 {% for obj in attribute %}
-    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "_isLinkedToArray" and obj[0] != "items" and obj[0] != "uid" and obj[0] != "smith" %}
+    {% if obj[0] != "flags" and obj[0] != "dflt" and obj[0] != "values" and obj[0] != "valType" and obj[0] != "role" and obj[0] != "min" and obj[0] != "max" and obj[0] != "arrayOk" and obj[0] != "flags" and obj[0] != "extras" and obj[0] != "description" and obj[0] != "_isLinkedToArray" and obj[0] != "items" and obj[0] != "uid" and obj[0] != "smith" and obj[0] != "_deprecated" and obj[0] != "_isSubplotObj" %}
 
         {% if obj[0] == "type" and page.language == "python" and block == "data" %}
             {% continue %}
@@ -68,16 +68,15 @@
                         {% assign typekey = obj[1].valType %}
                         (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
                     {% endif %}
-                {% endif %}
-                {% if obj[1].role == "object" %}
-                    {% if obj[1].items %}
-                        (<code tooltip="{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s. Each {% raw %}{object}{% endraw %} has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s</code>)
-                    {% else %}
-                        (<code tooltip="{% raw %}{object}{% endraw %} with any of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
+                    {% if obj[1].role == "object" %}
+                        {% if obj[1].items %}
+                            (<code tooltip="{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s. Each {% raw %}{object}{% endraw %} has one or more of the keys listed below." class="attribute-type">{% raw %}{array}{% endraw %} of {% raw %}{object}{% endraw %}s</code>)
+                        {% else %}
+                            (<code tooltip="{% raw %}{object}{% endraw %} with any of the keys listed below." class="attribute-type">{% raw %}{object}{% endraw %}</code>)
+                        {% endif %}
                     {% endif %}
-
-
                 {% endif %}
+
             {% endif %}
 
             {% if display_info and obj[1].valType == "flaglist" %}
