true and false replacements

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -69,4 +69,4 @@
 {% capture curlyarrays %}{% raw %}{arrays}{% endraw %}{% endcapture %}
 {% capture curly2darray %}{% raw %}{2D array}{% endraw %}{% endcapture %}
 {% capture curlyobject %}{% raw %}{object}{% endraw %}{% endcapture %}
-{{ plotschemacontent | replace:'*',quote | replace:curlyarray,array | replace:curlyobject,object | replace:curlyarrays,arrays | replace:curly2darray,2darray | replace:"data_array",data_array }}
+{{ plotschemacontent | replace:'*',quote | replace:curlyarray,array | replace:curlyobject,object | replace:curlyarrays,arrays | replace:curly2darray,2darray | replace:"data_array",data_array | replace:"true",truestring | replace:"false",falsestring }}
