--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -1,4 +1,4 @@
-{% if page.language == 'r' or page.language == 'ggplot2' or page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
+{% if page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
 
 <div style="
     background-image: url('http://i.imgur.com/gMliICo.png');
@@ -27,8 +27,6 @@
     font-family: 'Open sans',verdana,arial,sans-serif;
     background-color: rgba(255,255,255,0.8);">
 
-{% if page.language == 'r' or page.language == 'ggplot2' %}
-<a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-r">FREE 14 DAY TRIAL</a>
 {% elsif page.language == 'python' or page.language == 'matplotlib' %}
 <a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-ipython">FREE 14 DAY TRIAL</a>
 {% elsif page.language == 'matlab' %}
