fix if statement

--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -27,7 +27,7 @@
     font-family: 'Open sans',verdana,arial,sans-serif;
     background-color: rgba(255,255,255,0.8);">
 
-{% elsif page.language == 'python' or page.language == 'matplotlib' %}
+{% if page.language == 'python' or page.language == 'matplotlib' %}
 <a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-ipython">FREE 14 DAY TRIAL</a>
 {% elsif page.language == 'matlab' %}
 <a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-matlab">FREE 14 DAY TRIAL</a>
