--- a/_includes/lang-navigation.html
+++ b/_includes/lang-navigation.html
@@ -9,6 +9,8 @@
 		{% assign pyclass = "lang_nav_act" %}
 	{% elsif page.language == "pandas" %}
 		{% assign pdclass = "lang_nav_act" %}
+	{% elsif page.language == "excel" %}
+		{% assign xlsxclass = "lang_nav_act" %}		
 	{% elsif page.language contains "matlab" %}
 		{% assign matclass = "lang_nav_act" %}
 	{% elsif page.language == "r" %}
@@ -25,11 +27,12 @@
 		{% assign plotjsclass = "lang_nav_act" %}
 	{% endif %}
 
-
-
 	{% assign allpages = site.posts %}
 
 	{% for page in allpages %}
+		{% if page.permalink contains {{page_type}} and page.language == "excel" %}
+			<div class="lang_nav_button-div"><a class="lang_nav_button {{xlsxclass}}" href="http://help.plot.ly/excel{{page_type}}"><img src="{{ site.staticurl }}/images/excel-small.png" alt="python" class="lang_nav_thum">EXCEL</a></div>
+		{% endif %}	
 		{% if page.permalink contains {{page_type}} and page.language == "python" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{pyclass}}" href="/python{{page_type}}"><img src="{{ site.staticurl }}/images/python-small.png" alt="python" class="lang_nav_thum">PYTHON</a></div>
 		{% endif %}
@@ -41,9 +44,6 @@
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "r" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{rclass}}" href="/r{{page_type}}"><img src="{{ site.staticurl }}/images/r-small.png" alt="r" class="lang_nav_thum">R</a></div>
-		{% endif %}
-		{% if page.permalink contains {{page_type}} and page.language == "julia" %}
-			<div class="lang_nav_button-div"><a class="lang_nav_button {{juliaclass}}" href="/julia{{page_type}}"><img src="{{ site.staticurl }}/images/julia.png" alt="julia" class="lang_nav_thum">JULIA</a></div>
 		{% endif %}
 		{% if page.permalink contains {{page_type}} and page.language == "matplotlib" %}
 			<div class="lang_nav_button-div"><a class="lang_nav_button {{matplotclass}}" href="/matplotlib{{page_type}}"><img src="{{ site.staticurl }}/images/matplotlib_med.png" alt="matplotlib" class="lang_nav_thum">matplotlib</a></div>
