--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -1,7 +1,5 @@
-{% if page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
-
 <div style="
-    background-image: url('http://i.imgur.com/gMliICo.png');
+    background-image: url('http://images.plot.ly/background-images/grey-chart-background.png');
     height: 200px;
     font-family: 'Open sans',verdana,arial,sans-serif;
     position: relative;">
@@ -27,12 +25,7 @@
     font-family: 'Open sans',verdana,arial,sans-serif;
     background-color: rgba(255,255,255,0.8);">
 
-{% if page.language == 'python' or page.language == 'matplotlib' %}
-<a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-ipython">FREE 14 DAY TRIAL</a>
-{% elsif page.language == 'matlab' %}
-<a class="button trial-offline-cta" href="http://purchasing.plot.ly/plotly-offline-matlab">FREE 14 DAY TRIAL</a>
-{% endif %}
+<a class="button trial-offline-cta" href="https://plot.ly/products/cloud/">$20 / month</a>
 
 </div>
 </div>
-{% endif %}
