--- a/_includes/plotly_offline_cta.html
+++ b/_includes/plotly_offline_cta.html
@@ -6,26 +6,26 @@
 
 <h2 style="
     text-align: center;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,0.9);
     margin: 0px;
     padding-top: 20px;
-    font-family: 'Open sans',verdana,arial,sans-serif;">use plotly offline</h2>
+    font-family: 'Open sans',verdana,arial,sans-serif;">upgrade to pro</h2>
 
 <h5 style="
     text-align: center;
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255,255,255,0.9);
     margin: 0;
     padding: 20px 0px;
     color: black;
-    font-family: 'Open sans',verdana,arial,sans-serif;">$250 / developer / year</h5>
+    font-family: 'Open sans',verdana,arial,sans-serif;">unlimited private files & email support</h5>
 
 <div style="
     text-align: center;
     height: 50%;
     font-family: 'Open sans',verdana,arial,sans-serif;
-    background-color: rgba(255,255,255,0.8);">
+    background-color: rgba(255,255,255,0.9);">
 
-<a class="button trial-offline-cta" href="https://plot.ly/products/cloud/">$20 / month</a>
+<a class="button trial-offline-cta" href="https://plot.ly/products/cloud/">$20 per month</a>
 
 </div>
 </div>
