--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -3,11 +3,10 @@
     <div style="background-image: url({{site.staticurl}}/images/banner-bar.png);height: 170px;text-align: center;">
     	<div style="background-color: rgba(255,255,255,0.8); height: 100%; text-align: center;">
             <div style="text-align: center;position: relative; padding-top: 5px;">
-                
         	    <h6 style="color: black;">plotly is free for unlimited public use</h6>
-                <a class="button" href="https://plot.ly/settings/" target="_blank" style="text-decoration: none;font-size: 14px;padding: 12px 24px;">SIGN UP FOR FREE</a>
+                <a class="button" href="https://plot.ly/products/cloud/" target="_blank" style="text-decoration: none;font-size: 14px;padding: 12px 24px;">SIGN UP FOR FREE</a>
         	    <h6 style="color: black;" style="text-align: center;">
-        		    Sensitive data? Upgrade to a <a href="https://plot.ly/settings/subscription">paid plan</a>
+        		    Sensitive data? Upgrade to a <a href="https://plot.ly/products/cloud/">paid plan</a>
         	    </h6>
             </div>
         </div>
@@ -22,11 +21,10 @@
   	<div style="background-color: rgba(255,255,255,0.8); height: 100%; text-align: center;">
       <div style="text-align: center;position: relative;">
       		<h1 class="centered" style="margin-bottom: 20px;">plotly.js</h1>
-      	<h5>the premier charting library for the web</h5>
+      	<h5>JavaScript library for scientific interactive charts</h5>
       	<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });'>
       		<i class="fa fa-download fa-lg"></i> Download
       	</a>
-      	<p class="centered version-number">version {{site.plotlyjs_version}}</p>
       </div>
     </div>
   </div>
