--- a/_includes/ad-text.html
+++ b/_includes/ad-text.html
@@ -22,7 +22,7 @@
       <div style="text-align: center;position: relative;">
       		<h1 class="centered" style="margin-bottom: 20px;">plotly.js</h1>
       	<h5>JavaScript library for scientific interactive charts</h5>
-      	<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });'>
+      	<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" onclick='mixpanel.track("PlotlyJS Download",{ "Location": "Banner" });' download>
       		<i class="fa fa-download fa-lg"></i> Download
       	</a>
       </div>
