--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -52,32 +52,6 @@
 </div>
 {% endif %}
 
-{% if chart_events %}
-	{% if page.language == "plotly_js" %}
-		<hr>
-		<h4 id="chart-events">
-			<a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
-		</h4>
-		<p>
-			All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
-		</p>
-		<div class="row">
-		{% for page in languagelistimg %}
-			{% if page.display_as == "chart_events" %}
-				<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
-					<div class="alltutcol">
-						<img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-						<div class="titlecenter">
-							<h5 class="centered"> {{page.name}} </h5>
-						</div>
-					</div>
-				</a>
-			{% endif %}
-		{% endfor %}
-		</div>
-	{% endif %}
-{% endif %}
-
 {% if maps %}
 <hr>
 <h4 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h4>
@@ -173,13 +147,12 @@
 {% endif %}
 
 {% if chart_events %}
-{% if page.language != "plotly_js" %}
 <hr>
 <h4 id="chart-events">
 <a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
 </h4>
 <p>
-All Plotly charts have click, hover and zoom events exposed to add custom controls with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API</a>.
+All Plotly charts have click, hover and zoom events exposed to add custom controls{% if page.language != "plotly_js" %} with Plotly's JavaScript <a href="https://github.com/plotly/postMessage-API">postMessage API{% endif %}</a>.
 </p>
 <div class="row">
 {% for page in languagelistimg %}
