--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -214,8 +214,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 <div class="row">
 <p>Plotly is a web-connected service by default, but can also work entirely offline within RStudio, IPython notebook, and MATLAB.</p>
 <ul>
-<li><a href="http://purchasing.plot.ly/plotly-offline-r">Start a free 14 day Trial of plotly offline for RStudio and Shiny</a></li>
-<li><a href="https://plot.ly/r/offline/">plotly offline documentation</a></li>
+<li><a href="https://plot.ly/r/offline/">Using plotly offline with RStudio</a></li>
 </ul>
 </div>
 
@@ -305,18 +304,15 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 <ul>
 
 {% if page.language == 'ggplot2' %}
-<li><a href="http://purchasing.plot.ly/plotly-offline-r">Start a free 14 day Trial of plotly offline for RStudio and Shiny</a></li>
-<li><a href="https://plot.ly/r/offline/">plotly offline documentation</a></li>
+<li><a href="https://plot.ly/r/offline/">Using plotly offline with RStudio</a></li>
 {% endif %}
 
 {% if page.language == 'python' or page.language == 'matplotlib' %}
-	<li><a href="http://purchasing.plot.ly/plotly-offline-ipython">Start a free 14 day Trial of plotly offline for IPython notebook</a></li>
-	<li><a href="https://plot.ly/python/offline/">plotly offline documentation</a></li>
+	<li><a href="https://plot.ly/python/offline/">Using plotly offline with Python</a></li>
 {% endif %}
 
 {% if page.language == 'matlab' %}
-	<li><a href="http://purchasing.plot.ly/plotly-offline-matlab">Start a free 14 day Trial of plotly offline for MATLAB</a></li>
-	<li><a href="https://plot.ly/matlab/offline/">plotly offline documentation</a></li>
+	<li><a href="https://plot.ly/matlab/offline/">Using plotly offline with MATLAB</a></li>
 {% endif %}
 
 </ul>
