styling on plotlyjs-function-reference page

--- a/all_static/css/state.css
+++ b/all_static/css/state.css
@@ -12,6 +12,8 @@
   margin: 0;}
 .centered{
   text-align: center;}
+.left-align{
+  text-align: left;}
 .shiftup{
   margin-top: -150px;}
 .no_underline{
@@ -19,8 +21,7 @@
 .padding_left_small{
     padding-left: 40px;}
 .padding_right_small{
-  padding-right: 40px;
-}
+  padding-right: 40px;}
 .no-padding{
   padding: 0px;}
 .padding_left{
