--- a/_includes/plotlyjs_html.html
+++ b/_includes/plotlyjs_html.html
@@ -1,6 +1,6 @@
 &lt;!DOCTYPE html&gt;
 &lt;head&gt;
-  &lt;script src="http://cdn.plot.ly/plotly-latest.min.js"&gt;&lt;/script&gt;
+  &lt;script src="https://cdn.plot.ly/plotly-latest.min.js"&gt;&lt;/script&gt;
   {% if page.permalink contains "candlestick-charts/" or page.permalink contains "ohlc-charts/" %}
   &lt;!-- PlotlyFinance.js --&gt;
   &lt;script src="https://cdn.rawgit.com/etpinard/plotlyjs-finance/master/plotlyjs-finance.js"&gt;&lt;/script&gt;
