Updated iframe embed size. This removes scroll-bars from the embedded codepen

--- a/_includes/plotlyjs_html.html
+++ b/_includes/plotlyjs_html.html
@@ -1,11 +1,7 @@
 &lt;!DOCTYPE html&gt;
 &lt;head&gt;
-  &lt;!-- D3.js --&gt;
-  &lt;script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"&gt;&lt;/script&gt;
-  &lt;!-- jQuery --&gt;
-  &lt;script src="https://code.jquery.com/jquery-2.1.4.min.js"&gt;&lt;/script&gt;
   &lt;!-- Plotly.js --&gt;
-  &lt;script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"&gt;&lt;/script&gt;
+  &lt;script src="https://cdn.plot.ly/plotly-latest.min.js"&gt;&lt;/script&gt;
   {% if page.permalink contains "candlestick-charts/" or page.permalink contains "ohlc-charts/" %}
   &lt;!-- PlotlyFinance.js --&gt;
   &lt;script src="https://cdn.rawgit.com/etpinard/plotlyjs-finance/master/plotlyjs-finance.js"&gt;&lt;/script&gt;
