--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -30,8 +30,8 @@
 
 
 {% if chart_type %}
-<hr>
-<h4 id="basic-charts">
+<hr class="example-section-break">
+<h4 class="example-section-title" id="basic-charts">
 {% if page.language != "r" %}
 <a class="no_underline plot-blue" href="#basic-charts">Basic Charts</a>
 {% endif %}
@@ -54,7 +54,7 @@
 
 {% if maps %}
 <hr>
-<h4 id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h4>
+<h4 class="example-section-title" id="maps"><a class="no_underline plot-blue" href="#maps">Maps</a></h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "maps" %}
@@ -73,7 +73,7 @@
 
 {% if 3d_charts %}
 <hr>
-<h4 id="3d-charts">
+<h4 class="example-section-title" id="3d-charts">
 <a class="no_underline plot-blue" href="#3d-charts">3d Charts</a>
 </h4>
 <div class="row">
@@ -94,7 +94,7 @@
 
 {% if financial_analysis %}
 <hr>
-<h4 id="maps"><a class="no_underline plot-blue" href="#maps">Financial Analysis</a></h4>
+<h4 class="example-section-title" id="maps"><a class="no_underline plot-blue" href="#maps">Financial Analysis</a></h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "financial_analysis" %}
@@ -113,7 +113,7 @@
 
 {% if multiple_axes %}
 <hr>
-<h4 id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h4>
+<h4 class="example-section-title" id="multiple-axes-subplots-and-insets"><a class="no_underline plot-blue" href="#multiple-axes-subplots-and-insets">Multiple Axes, Subplots, and Insets</a></h4>
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "multiple_axes" %}
@@ -133,7 +133,7 @@
 
 {% if page.language == "matlab" or page.language == "python" %}
 <hr>
-<h4 id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h4>
+<h4 class="example-section-title" id="streaming"><a class="no_underline plot-blue" href="#streaming">Streaming</a></h4>
 <div class="row">
 {% if page.language == "matlab" %}<a href="/matlab/streaming-tutorial/">{% elsif page.language == "python"%}<a href="/python/streaming-tutorial/">{% endif %}
 <div class="alltutcol">
@@ -148,7 +148,7 @@
 
 {% if chart_events %}
 <hr>
-<h4 id="chart-events">
+<h4 class="example-section-title" id="chart-events">
 <a class="no_underline plot-blue" href="#chart-events">Add Custom Controls with JavaScript</a>
 </h4>
 <p>
@@ -209,7 +209,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </div>
 
 <hr>
-<h4 id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
+<h4 class="example-section-title" id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
 <div class="row">
 <p>Plotly is a web-connected service by default, but can also work entirely offline within RStudio, IPython notebook, and MATLAB.</p>
 <ul>
@@ -221,7 +221,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if layout_options %}
 <hr>
-<h4 id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
+<h4 class="example-section-title" id="layout-options"><a class="no_underline plot-blue" href="#layout-options">Layout Options</a></h4>
 <div class="row">
 <div class="six columns">
 <ul>
@@ -240,7 +240,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if file_settings %}
 <hr>
-<h4 id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h4>
+<h4 class="example-section-title" id="file-settings"><a class="no_underline plot-blue" href="#file-settings">File Settings</a></h4>
 <div class="row">
 <div class="six columns">
 <ul>
@@ -259,7 +259,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if tutorial %}
 <hr>
-<h4 id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h4>
+<h4 class="example-section-title" id="tutorial"><a class="no_underline plot-blue" href="#tutorial">Tutorial</a></h4>
 <div class="row">
 <div class="six columns">
 <ul>
@@ -278,7 +278,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if get_request %}
 <hr>
-<h4 id="static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Image Export & Retrieving Plots</a></h4>
+<h4 class="example-section-title" id="static-image-export"><a class="no_underline plot-blue" href="#get-requests-static-image-export">Image Export & Retrieving Plots</a></h4>
 <div class="row">
 <div class="six columns">
 <ul>
@@ -296,7 +296,7 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 
 {% if page.language == 'ggplot2' or page.language == 'matlab' or page.language == 'python' or page.language == 'matplotlib' %}
 <hr>
-<h4 id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
+<h4 class="example-section-title" id="using-offline"><a class="no_underline plot-blue" href="#using-offline">Using Offline</a></h4>
 <div class="row">
 <p>Plotly is a web-connected service by default, but can also work entirely offline within RStudio, IPython notebook, and MATLAB.</p>
 <div class="six columns">
