cycle in a 5-col clear

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -47,6 +47,7 @@
       </div>
   </div>
 </a>
+<div class="{% cycle '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
